testdata/project-v4-multigroup/config/policy/protect-metrics.yaml
# NetworkPolicy to protect metrics endpoint
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: project-v4-multigroup
    app.kubernetes.io/managed-by: kustomize
  name: protect-metrics
  namespace: system
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
    - Egress
    - Ingress
  egress:
    - {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            monitoring: enabled  # Only from namespaces with this label
      ports:
        - protocol: TCP
          port: 8080  # TCP port for metrics
